@@ -1,3 +1,5 @@
+(2024-02-15) 0.7.6 : improve LOCUS behavior with PERSITE=1 and in piawka_par_reg.sh
+
 (2024-02-15) 0.7.5 : add VERBOSE=1 option
 
 (2024-02-14) 0.7.4 : add FST=WC option, set FST=HUD as default
